src/components/Dialogs/EditMediaDialog/Chapters.css
@import "../../../vars.css";

.Chapters-placeholder {
  color: var(--muted-text-color);
}

.Chapters-select {
  display: flex;
}

.ChapterItem-title {
  /* Push the duration to the edge */
  flex-grow: 1;
}

.ChapterItem-duration {
  color: var(--muted-text-color);
  margin-right: 5px;
  margin-left: 7px;
}

